# modul_graph

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gen_translations.sh  out.csv  pyproject.toml  testing_gad.ipynb
.devcontainer/: .env  .neo4j.env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml
locales/de/LC_MESSAGES/: modul_graph.po
modul_graph/: DTOs.py  __main__.py  fast_api.py  fastapi.py  i18n.py  settings.py
modul_graph/experiments/: pygad_suggestions.py
modul_graph/loader/: __init__.py  pdf.py
modul_graph/models/: Module.py  __init__.py  competence.py  cp_cluster.py  micro_unit.py  module.py  module_area.py  module_cell.py  semester.py  standard_curriculum.py  study_exam_rules.py  unstructured_entry.py
modul_graph/routes/: analysis.py  cell.py  cp_cluster.py  module.py  module_area.py  router_service.py  semester.py  standard_curriculum.py
modul_graph/static/spo_2017_inf_wise/: SER.py  _competences.py  _cp_cluster.py  _module_area.py  _module_cells.py  _modules.py  _semesters.py  _standard_curricula.py  _standard_curriculums.py
modul_graph/utils/: analysis_DAO.py  analysis_controller.py  analysis_repo.py  analysis_service.py  computations.py  controller.py  cp_cluster.py  cypher_queries.py  data_access.py  graph_exception.py  module_area_router_service.py  module_router_service.py  repository.py  router_service.py  rune.py  sc_DAO.py  sc_router_service.py  semester_router_service.py  service.py  std_curr.py  test_db_connection.py
