[tool.poetry]
name = "modul-graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^2.2.1"
klepto = "^0.2.5"
pypdf2 = "~2"
loguru = "^0.7.2"
camelot-py = { extras = ["base"], version = "^0.11.0" }
click = "^8.1.7"
neomodel = { extras = ["extras"], version = "^5.2.1" }

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
