[tool.poetry]
name = "modul-graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.1"
loguru = "^0.7.2"
neomodel = "^5.2.1"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
mypy = "^1.10.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
